
	* in summary.plm, the p-value is now computed using a Student
	distribution and not a normal one

	* the lag.pserie method is modified so that it deals correctly
	with factors, and not only with numeric vectors. The diff.pserie
	method returns an error if its argument is not numeric

	* the instruments-"backward compatibility" stuff in plm is
	simplified thanks to the new features of Formula

	* 'pserie' is renamed 'pseries'

	* a THANKS file is added
	
	* the `[.pdata.frame` function is modified so that [, j] returns a
	pseries and not a pdata.frame when j is a single integer, and a
	backward compatibility feature is added for the "index" attribute

Changes since version 1.2-1

	* a new purtest function to perform unit root tests

	* [[.pdata.frame is modified so that NULL (and not an error
	message) is returned if an unknown column is selected

Changes since version 1.2-2

	* the documentation has been improved
	
	* the pvalue for purtest(..., type = "madwu") was in error (by a factor of 2)

	* in formula(dynformula), a bug is fixed so that the endog
	variable doesn't appear on the rhs if there is no lags

	* in pgmm, the extract.data has been rewriten and is *much* faster

	* two new functions vcovBK and vcovSCC have been added

	* a 'model' argument is added to pgmm.sys and
	pgmm.diff (previously, the model name was extracted from the call)

	* Kt is fixed to 0 in pgmm when effect="individual"
	
Changes since version 1.2-3
	
	* lag.pseries now returns relevant names for the returned factor
	
	* pFormula is modified so that it can handle correctly Formula
	object, and not only formula
	
	* pgmm has been completely rewriten with a new 'Formula'
	interface. Old formula and dynformula interfaces are kept for
	backward compatibility but won't be maintained in the future

	* subset, na.action are added to the list of arguments of pgmm and
	oldpgmm

	* lag.pseries is now able to deal with vector arguments for lags,
	e.g. lag(x, c(1,3))
	