@@ -207,8 +207,9 @@ vcovHC.pgmm <- function(x,...){
     res1s <- lapply(yX,function(x) x[,1]-crossprod(t(x[,-1]),coef1s))
     K <- ncol(yX[[1]])
     D <- c()
-    WX <- suml(mapply(function(x, y) crossprod(x, y[,-1]), x$W, yX, SIMPLIFY = FALSE))
-    We <- suml(mapply(function(x, y) crossprod(x, y), x$W, residuals, SIMPLIFY = FALSE))
+    WX <- Reduce("+",
+                 mapply(function(x, y) crossprod(x, y[,-1]), x$W, yX, SIMPLIFY = FALSE))
+    We <- Reduce("+", mapply(function(x, y) crossprod(x, y), x$W, residuals, SIMPLIFY = FALSE))
     B1 <- solve(t(WX)%*%A1%*%WX)
     B2 <- vcov(x)
     vcov1s <- B1%*%(t(WX)%*%A1%*%solve(A2)%*%A1%*%WX)%*%B1
@@ -219,10 +220,11 @@ vcovHC.pgmm <- function(x,...){
                       - z - t(z)
                     },
                     yX, res1s, SIMPLIFY = FALSE)
-      wexkw <- suml(mapply(
-                           function(x,y)
-                           crossprod(x,crossprod(y,x)),
-                           x$W, exk, SIMPLIFY = FALSE))
+      wexkw <- Reduce("+",
+                      mapply(
+                             function(x,y)
+                             crossprod(x,crossprod(y,x)),
+                             x$W, exk, SIMPLIFY = FALSE))
       Dk <- -B2 %*% t(WX) %*% A2 %*% wexkw %*% A2 %*% We
       D <- cbind(D,Dk)
     }
@@ -231,7 +233,7 @@ vcovHC.pgmm <- function(x,...){
   else{
     res1s <- lapply(yX,function(z) z[,1]-crossprod(t(z[,-1]),x$coefficients))
     K <- ncol(yX[[1]])
-    WX <- suml(mapply(function(z,y) crossprod(z[,-1],y),yX,x$W,SIMPLIFY=FALSE))
+    WX <- Reduce("+", mapply(function(z,y) crossprod(z[,-1],y),yX,x$W,SIMPLIFY=FALSE))
     B1 <- vcov(x)
     vcovr <- B1%*%(WX%*%A1%*%solve(A2)%*%A1%*%t(WX))%*%B1
   }
